deploy: 51a80915ff61518b3970654c255d4483d34b3ec6

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Igor Popov</title>
+<title>404 Page not found | ipopov.dev</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -18,6 +18,7 @@
 <link rel="mask-icon" href="https://ipopov.dev/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
+<link rel="alternate" hreflang="en" href="https://ipopov.dev/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -80,7 +81,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://ipopov.dev/" accesskey="h" title="Igor Popov (Alt + H)">Igor Popov</a>
+            <a href="https://ipopov.dev/" accesskey="h" title="ipopov.dev (Alt + H)">ipopov.dev</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -102,6 +103,8 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
@@ -113,7 +116,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://ipopov.dev/">Igor Popov</a></span>
+    <span>&copy; 2024 <a href="https://ipopov.dev/">ipopov.dev</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
