deploy: 51b92a65cca61893e368afb2a8015b9e49f20c0c

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://ipopov.dev/images/1.jpg" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
-            height="140" width="140" />
+            <img draggable="false" src="https://ipopov.dev/images/1_hu415ed2a3b76a4b45357dd8f7776c07e5_251235_140x140_resize_q75_box.jpg" alt="&lt;title of image as alt&gt;" title="&lt;title of image as alt&gt;"
+                height="140" width="140" />
         <h1>Igor Popov</h1>
         <span>iOS Development</span><div class="social-icons">
     <a href="https://github.com/oboje" target="_blank" rel="noopener noreferrer me" title="Github">
