--- a/404.html
+++ b/404.html
@@ -126,7 +126,8 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://ipopov.dev/">ipopov.dev</a></span>
+    <span>&copy; 2024 POPOV SOFTWARE SOLUTIONS LLC</span>
+    <br> 
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
