deploy: 1a3269cfbec2bab4625b8ac0fdcd92543678441a

--- a/404.html
+++ b/404.html
@@ -15,10 +15,10 @@
   gtag('config', 'G-5J18R8NBLF');
 </script>
 <meta name="robots" content="index, follow">
-<title>404 Page not found | ipopov.dev</title>
+<title>404 Page not found | ipopov - iOS Mobile App Development Services | Igor Popov</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
-<meta name="author" content="">
+<meta name="description" content="ipopov - Expert iOS mobile app development services from scratch. AI-powered iOS development, consulting, and mobile app solutions. Hire experienced iOS developers from Eastern Europe. Contact: hello@ipopov.dev">
+<meta name="author" content="Igor Popov">
 <link rel="canonical" href="https://ipopov.dev/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.21f500b4a3bce932440499a5130f10f8470941895136c68d7b307b2ddbd942de.css" integrity="sha256-IfUAtKO86TJEBJmlEw8Q&#43;EcJQYlRNsaNezB7LdvZQt4=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://ipopov.dev/favicon.ico">
@@ -66,13 +66,13 @@
 
     </style>
 </noscript><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="ipopov - Expert iOS mobile app development services from scratch. AI-powered iOS development, consulting, and mobile app solutions. Hire experienced iOS developers from Eastern Europe. Contact: hello@ipopov.dev" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://ipopov.dev/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="ipopov - Expert iOS mobile app development services from scratch. AI-powered iOS development, consulting, and mobile app solutions. Hire experienced iOS developers from Eastern Europe. Contact: hello@ipopov.dev"/>
 
 </head>
 
@@ -91,7 +91,6 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://ipopov.dev/" accesskey="h" title="ipopov.dev (Alt + H)">ipopov.dev</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -113,7 +112,7 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
-                <ul class="lang-switch"><li>|</li>
+                <ul class="lang-switch">
                 </ul>
             </div>
         </div>
@@ -121,12 +120,13 @@
         </ul>
     </nav>
 </header>
+
 <main class="main">
 <div class="not-found">404</div>
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 POPOV SOFTWARE SOLUTIONS LLC</span>
+    <span>&copy; 2025 POPOV SOFTWARE SOLUTIONS LLC</span>
     <br> 
     <span>
         Powered by
